--- a/Languages/English/Keyed/Echoes.xml
+++ b/Languages/English/Keyed/Echoes.xml
@@ -8,4 +8,5 @@
 	<EOTR_CaravanSite_LetterText>While travelling, your caravan spotted a site: {0}.\nWould you like to approach the site now or mark it for later?</EOTR_CaravanSite_LetterText>
 	<EOTR_CaravanSite_LetterEnterNow>Enter Now</EOTR_CaravanSite_LetterEnterNow>
 	<EOTR_CaravanSite_LetterMarkForLater>Mark for Later</EOTR_CaravanSite_LetterMarkForLater>
+	<EOTR_TransporterSite_LetterText>While flying to their destination, {0} spotted a site: {1}.\n{0} marked it for later.</EOTR_TransporterSite_LetterText>
 </LanguageData>
