--- a/Languages/English/Keyed/Echoes.xml
+++ b/Languages/English/Keyed/Echoes.xml
@@ -9,4 +9,5 @@
 	<EOTR_CaravanSite_LetterEnterNow>Enter Now</EOTR_CaravanSite_LetterEnterNow>
 	<EOTR_CaravanSite_LetterMarkForLater>Mark for Later</EOTR_CaravanSite_LetterMarkForLater>
 	<EOTR_TransporterSite_LetterText>While flying to their destination, {0} spotted a site: {1}.\n{0} marked it for later.</EOTR_TransporterSite_LetterText>
+	<EOTR_Site>While travelling, {0} spotted an unknown site. Marking it for later.</EOTR_Site>
 </LanguageData>
