--- a/Languages/English/Keyed/Echoes.xml
+++ b/Languages/English/Keyed/Echoes.xml
@@ -6,7 +6,7 @@
 	<EOTR_Structures>Structures</EOTR_Structures>
 	<EOTR_Weight>Weight: {0}</EOTR_Weight>
 	<EOTR_CaravanSite_LetterMarkForLater>Mark for Later</EOTR_CaravanSite_LetterMarkForLater>
-	<EOTR_SiteFlier>While flying to their destination, {0} spotted the ruins of a hidden site below. The structures still stand in surprisingly good condition, as though waiting to be uncovered. \n{0} marked the location for later exploration.</EOTR_SiteFlier>
-	<EOTR_SiteCaravan>On their route, {0}’s caravan stumbled upon the ruins of a hidden site and marked them. The buildings stand tall, scarred by time but far from collapsed. \nThere could be valuables inside, however Such ruins rarely remain untouched without reason</EOTR_SiteCaravan>
+	<EOTR_SiteFlier>While flying to their destination, {0} spotted a hidden site and marked the location on the map for later exploration.</EOTR_SiteFlier>
+	<EOTR_SiteCaravan>One their route, {0}'s caravan has stumbled upon a hidden structure and the location has been marked on your map. There may be valuables inside, but danger could be lurking as well.</EOTR_SiteCaravan>
 	<EOTR_UnknownSite>Hidden Site</EOTR_UnknownSite>
 </LanguageData>
